# tgi_profiler

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements-test.txt  requirements.txt
.github/workflows/: python-package.yml
src/tgi_profiler/: __init__.py  __main__.py  boundary_detection.py  config.py  constants.py  mllm_client.py  profiler.py  tgi_container.py
src/tgi_profiler/server/: tgi_container.py
src/tgi_profiler/utils/: __init__.py  colored_logging.py  visualize_mem_profile.py
tests/: conftest.py
tests/integration/: test_profiler.py  test_tgi_container.py
tests/unit/: test_boundary_detection.py  test_mllm_client.py  test_profiler.py  test_profiler_grid_operations.py  test_profiler_token_counting.py  test_tgi_container.py
