[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tgi-profiler"
version = "1.0.0"
authors = [
    { name = "Robin Karlsson", email = "robin@exodapt.ai" },
]
description = "A framework for empirically determining maximum sequence length capabilities of LLM models deployed via TGI"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "GNU General Public License v3" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "huggingface-hub>=0.19.0",
    "docker>=6.1.0",
    "lark>=1.1.5",
    "colorama>=0.4.6",
    "anthropic>=0.5.0",
    "openai>=1.0.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "transformers>=4.30.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "scikit-learn>=1.3.0",
]

[project.urls]
"Homepage" = "https://github.com/robin-karlsson0/tgi_profiler"
"Bug Tracker" = "https://github.com/robin-karlsson0/tgi-profiler/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["tgi_profiler*"]
namespaces = false

[tool.setuptools.package-data]
"tgi_profiler" = ["py.typed"]

[project.scripts]
tgi-profiler = "tgi_profiler.__main__:main"
